--- a/task-4.html
+++ b/task-4.html
@@ -11,15 +11,25 @@
     <p><a href="./index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
+      <label class="task-4-label">
         Email
-        <input type="email" name="email" />
+        <input
+          type="email"
+          name="email"
+          class="task-4-input"
+          placeholder="Type area"
+        />
       </label>
-      <label>
+      <label class="task-4-label">
         Password
-        <input type="password" name="password" />
+        <input
+          type="password"
+          name="password"
+          class="task-4-input"
+          placeholder="Type area"
+        />
       </label>
-      <button type="submit">Login</button>
+      <button type="submit" class="task-4-button">Login</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
